fixed styles for sharing btns on small screens

--- a/src/stylesheets/main.styl
+++ b/src/stylesheets/main.styl
@@ -127,10 +127,10 @@ h3
   margin 20px 0
 
 .social
-  padding 6px 12px
+  padding 5px 8px
   color #ffffff
   font-weight bold
-  margin-right 5px
+  margin-right 3px
   border-radius 4px
   text-decoration none
 
